MB-8330 Add endpoint for approving shipment
