# pkg/gen/ghcapi/ghcoperations/mymove_api.go
@@ -55,6 +55,9 @@ func NewMymoveAPI(spec *loads.Document) *MymoveAPI {
 
 		JSONProducer: runtime.JSONProducer(),
 
+		MtoShipmentApproveShipmentHandler: mto_shipment.ApproveShipmentHandlerFunc(func(params mto_shipment.ApproveShipmentParams) middleware.Responder {
+			return middleware.NotImplemented("operation mto_shipment.ApproveShipment has not yet been implemented")
+		}),
 		OrderCounselingUpdateAllowanceHandler: order.CounselingUpdateAllowanceHandlerFunc(func(params order.CounselingUpdateAllowanceParams) middleware.Responder {
 			return middleware.NotImplemented("operation order.CounselingUpdateAllowance has not yet been implemented")
 		}),
@@ -187,6 +190,8 @@ type MymoveAPI struct {
 	//   - application/json
 	JSONProducer runtime.Producer
 
+	// MtoShipmentApproveShipmentHandler sets the operation handler for the approve shipment operation
+	MtoShipmentApproveShipmentHandler mto_shipment.ApproveShipmentHandler
 	// OrderCounselingUpdateAllowanceHandler sets the operation handler for the counseling update allowance operation
 	OrderCounselingUpdateAllowanceHandler order.CounselingUpdateAllowanceHandler
 	// OrderCounselingUpdateOrderHandler sets the operation handler for the counseling update order operation
@@ -319,6 +324,9 @@ func (o *MymoveAPI) Validate() error {
 		unregistered = append(unregistered, "JSONProducer")
 	}
 
+	if o.MtoShipmentApproveShipmentHandler == nil {
+		unregistered = append(unregistered, "mto_shipment.ApproveShipmentHandler")
+	}
 	if o.OrderCounselingUpdateAllowanceHandler == nil {
 		unregistered = append(unregistered, "order.CounselingUpdateAllowanceHandler")
 	}
@@ -506,6 +514,10 @@ func (o *MymoveAPI) initHandlerCache() {
 		o.handlers = make(map[string]map[string]http.Handler)
 	}
 
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/shipments/{shipmentID}/approve"] = mto_shipment.NewApproveShipment(o.context, o.MtoShipmentApproveShipmentHandler)
 	if o.handlers["PATCH"] == nil {
 		o.handlers["PATCH"] = make(map[string]http.Handler)
 	}
