# pkg/handlers/ghcapi/mto_shipment.go
@@ -352,6 +352,49 @@ func (h DeleteShipmentHandler) Handle(params shipmentops.DeleteShipmentParams) m
 	return shipmentops.NewDeleteShipmentNoContent()
 }
 
+// ApproveShipmentHandler approves a shipment
+type ApproveShipmentHandler struct {
+	handlers.HandlerContext
+	services.ShipmentApprover
+}
+
+// Handle approves a shipment
+func (h ApproveShipmentHandler) Handle(params mtoshipmentops.ApproveShipmentParams) middleware.Responder {
+	session, logger := h.SessionAndLoggerFromRequest(params.HTTPRequest)
+
+	if !session.IsOfficeUser() || !session.Roles.HasRole(roles.RoleTypeTOO) {
+		logger.Error("Only TOO role can approve shipments")
+		return mtoshipmentops.NewApproveShipmentForbidden()
+	}
+
+	shipmentID := uuid.FromStringOrNil(params.ShipmentID.String())
+	eTag := params.IfMatch
+	shipment, err := h.ApproveShipment(shipmentID, eTag)
+
+	if err != nil {
+		logger.Error("ApproveShipment error: ", zap.Error(err))
+
+		switch e := err.(type) {
+		case services.NotFoundError:
+			return mtoshipmentops.NewApproveShipmentNotFound()
+		case services.InvalidInputError:
+			payload := payloadForValidationError("Validation errors", "ApproveShipment", h.GetTraceID(), e.ValidationErrors)
+			return mtoshipmentops.NewApproveShipmentUnprocessableEntity().WithPayload(payload)
+		case services.PreconditionFailedError:
+			return mtoshipmentops.NewApproveShipmentPreconditionFailed().WithPayload(&ghcmessages.Error{Message: handlers.FmtString(err.Error())})
+		case services.ConflictError, mtoshipment.ConflictStatusError:
+			return mtoshipmentops.NewApproveShipmentConflict().WithPayload(&ghcmessages.Error{Message: handlers.FmtString(err.Error())})
+		default:
+			return mtoshipmentops.NewApproveShipmentInternalServerError()
+		}
+	}
+
+	h.triggerShipmentApprovalEvent(shipmentID, shipment.MoveTaskOrderID, params)
+
+	payload := payloads.MTOShipment(shipment)
+	return mtoshipmentops.NewApproveShipmentOK().WithPayload(payload)
+}
+
 func (h DeleteShipmentHandler) triggerShipmentDeletionEvent(shipmentID uuid.UUID, moveID uuid.UUID, params shipmentops.DeleteShipmentParams) {
 	logger := h.LoggerFromRequest(params.HTTPRequest)
 
@@ -368,6 +411,26 @@ func (h DeleteShipmentHandler) triggerShipmentDeletionEvent(shipmentID uuid.UUID
 
 	// If the event trigger fails, just log the error.
 	if err != nil {
-		logger.Error("ghcapi.DeleteMTOShipmentHandler could not generate the event")
+		logger.Error("ghcapi.DeleteMTOShipmentHandler could not generate the event", zap.Error(err))
+	}
+}
+
+func (h ApproveShipmentHandler) triggerShipmentApprovalEvent(shipmentID uuid.UUID, moveID uuid.UUID, params mtoshipmentops.ApproveShipmentParams) {
+	logger := h.LoggerFromRequest(params.HTTPRequest)
+
+	_, err := event.TriggerEvent(event.Event{
+		EndpointKey: event.GhcApproveShipmentEndpointKey,
+		// Endpoint that is being handled
+		EventKey:        event.ShipmentApproveEventKey, // Event that you want to trigger
+		UpdatedObjectID: shipmentID,                    // ID of the updated logical object
+		MtoID:           moveID,                        // ID of the associated Move
+		Request:         params.HTTPRequest,            // Pass on the http.Request
+		DBConnection:    h.DB(),                        // Pass on the pop.Connection
+		HandlerContext:  h,                             // Pass on the handlerContext
+	})
+
+	// If the event trigger fails, just log the error.
+	if err != nil {
+		logger.Error("ghcapi.ApproveShipmentHandler could not generate the event", zap.Error(err))
 	}
 }
